# avgn

./: README.md  pyproject.toml
avgn/: __init__.py
avgn/VAE_analysis/: latent_analysis.py
avgn/tensorflow/: VAE.py
avgn/visualization/: projections.py
