[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avgn"
version = "0.2.0"
description = "Latent models for visualizing, characterizing, and generating animal vocalizations"
authors = [
  { name = "Tim Sainburg" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

# Main dependencies
dependencies = [
  "click==8.1.7",
  "awscli==1.16.201",
  "python-dotenv>=0.5.1",
  "umap-learn==0.5.7",
  "librosa==0.10.2.post1",
  "numpy==1.26.4",
  "pandas==2.2.3",
  "noisereduce==3.0.3",
  "pillow==10.4.0",
  "scikit-learn==1.5.2",
  "scipy==1.11.0",
  "seaborn==0.13.2",
  "networkx==2.5",
  "hdbscan==0.8.40",
  "tqdm==4.66.6",
  "h5py==3.12.1",
  "joblib==1.4.2",
  "matplotlib==3.7.3",
  "pathlib2==2.3.7.post1",
  "ipykernel==6.29.5",
  "tensorflow[and-cuda]==2.18.0",
  "tensorflow-probability==0.25.0",
  "tf_keras==2.18.0",
  "ipywidgets",
  "jupyterlab_widgets",
]

[project.optional-dependencies]
dev = [
  "Sphinx",
  "coverage",
  "flake8"
]

[tool.setuptools]
packages = ["avgn"]

# Automatically find all packages like find_packages()
[tool.setuptools.packages.find]
where = ["."]
